--- a/scss/coreui.scss
+++ b/scss/coreui.scss
@@ -1,9 +1,9 @@
 /*!
- * CoreUI - HTML, CSS, and JavaScript UI Components Library
+ * CoreUI PRO - HTML, CSS, and JavaScript UI Components Library
  * @version v4.0.0-alpha.2
- * @link https://coreui.io/
+ * @link https://coreui.io/pro/
  * Copyright (c) 2021 creativeLabs Łukasz Holeczek
- * License MIT  (https://coreui.io/license/)
+ * License (https://coreui.io/pro/license/)
  */
 
 // scss-docs-start import-stack
