--- a/scss/themes/dark/_utilities.scss
+++ b/scss/themes/dark/_utilities.scss
@@ -4,9 +4,27 @@ $utilities: ();
 // stylelint-disable-next-line scss/dollar-variable-default
 $utilities: map-merge(
   (
+    "color": (
+      property: color,
+      class: text,
+      values: map-merge(
+        $theme-colors,
+        (
+          "white": $white,
+          "body": $body-color-dt,
+          "black-50": rgba($black, .5),
+          "white-50": rgba($white, .5),
+          "reset": inherit,
+          "high-emphasis": $high-emphasis-dt,
+          "medium-emphasis": $medium-emphasis-dt,
+          "disabled": $disabled-dt
+        )
+      ),
+      only-vars: true,
+      theme-prefix: true,
+    ),
     "background-color": (
       property: background-color,
-      prefix: "dark\\:",
       class: bg,
       values: map-merge(
         $theme-colors,
@@ -16,22 +34,9 @@ $utilities: map-merge(
           "transparent": transparent
         )
       ),
-      vars: true
-    ),
-    "background-color-exclude": (
-      property: background-color,
-      class: bg,
-      postfix: ":not([class*='dark:'])",
-      values: map-merge(
-        $theme-colors,
-        (
-          "body": $body-bg,
-          "white": $white,
-          "transparent": transparent
-        )
-      ),
-      vars: true
-    ),
+      only-vars: true,
+      theme-prefix: true,
+    )
   ),
   $utilities
 );
