--- a/scss/_functions.scss
+++ b/scss/_functions.scss
@@ -296,3 +296,8 @@ $_luminance-list: .0008 .001 .0011 .0013 .0015 .0017 .002 .0022 .0025 .0027 .003
 
   @return if($return-calc == true, calc(#{$value1} - #{$value2}), $value1 + unquote(" - ") + $value2);
 }
+
+// Generate selectors for theme variants
+@function theme-prefix($selector) {
+  @return #{"." + $theme-prefix + "\\:" + $selector + ", " + "." + $selector + ":not([class*='#{$theme-prefix}:'])"};
+}
