--- a/scss/mixins/_buttons.scss
+++ b/scss/mixins/_buttons.scss
@@ -4,7 +4,7 @@
 // and disabled options for all buttons
 
 // scss-docs-start btn-variant-mixin
-@mixin button-variant($state, $variant) {
+@mixin button-variant($state, $variant, $theme-prefix: false) {
   $background: map-get($variant, "bg");
   $border-color: map-get($variant, "border-color");
   $color: map-get($variant, "color");
@@ -19,7 +19,9 @@
   $disabled-color: map-get($variant, "disabled-color");
   $shadow: map-get($variant, "shadow");
 
-  .btn-#{$state} {
+  $selector: if($theme-prefix, theme-prefix("btn-#{$state}"), ".btn-#{$state}");
+
+  #{$selector} {
     --#{$variable-prefix}btn-bg: #{$background};
     --#{$variable-prefix}btn-border-color: #{$border-color};
     --#{$variable-prefix}btn-color: #{$color};
@@ -38,7 +40,7 @@
 // scss-docs-end btn-variant-mixin
 
 // scss-docs-start btn-outline-variant-mixin
-@mixin button-outline-variant($state, $variant) {
+@mixin button-outline-variant($state, $variant, $theme-prefix: false) {
   $color: map-get($variant, "color");
   $hover-background: map-get($variant, "hover-bg");
   $hover-border-color: map-get($variant, "hover-border-color");
@@ -49,7 +51,9 @@
   $disabled-color: map-get($variant, "disabled-color");
   $shadow: map-get($variant, "shadow");
 
-  .btn-outline-#{$state} {
+  $selector: if($theme-prefix, theme-prefix("btn-outline-#{$state}"), ".btn-outline-#{$state}");
+
+  #{$selector} {
     --#{$variable-prefix}btn-border-color: #{$color};
     --#{$variable-prefix}btn-color: #{$color};
     --#{$variable-prefix}btn-hover-bg: #{$hover-background};
@@ -66,7 +70,7 @@
 
 // Button Ghost
 
-@mixin button-ghost-variant($state, $variant) {
+@mixin button-ghost-variant($state, $variant, $theme-prefix: false) {
   $color: map-get($variant, "color");
   $hover-background: map-get($variant, "hover-bg");
   $hover-border-color: map-get($variant, "hover-border-color");
@@ -77,7 +81,9 @@
   $disabled-color: map-get($variant, "disabled-color");
   $shadow: map-get($variant, "shadow");
 
-  .btn-ghost-#{$state} {
+  $selector: if($theme-prefix, theme-prefix("btn-ghost-#{$state}"), ".btn-ghost-#{$state}");
+
+  #{$selector} {
     --#{$variable-prefix}btn-color: #{$color};
     --#{$variable-prefix}btn-hover-bg: #{$hover-background};
     --#{$variable-prefix}btn-hover-border-color: #{$hover-border-color};
