--- a/scss/themes/dark/_variables.scss
+++ b/scss/themes/dark/_variables.scss
@@ -131,6 +131,8 @@ $component-active-bg-dt:     $primary-dt !default;
 $accordion-button-color-dt:               $body-color-dt !default;
 $accordion-button-bg-dt:                  transparent !default;
 $accordion-border-color-dt:               rgba($white, .125) !default;
+$accordion-bg-dt:                         transparent !default;
+
 
 $accordion-button-color-dt:               $body-color-dt !default;
 $accordion-button-bg-dt:                  transparent !default;
@@ -151,6 +153,7 @@ $accordion-button-active-icon-dt:  url("data:image/svg+xml,<svg xmlns='http://ww
 $accordion-theme-map: (
   "accordion-button-color":               $accordion-button-color-dt,
   "accordion-button-bg":                  $accordion-button-bg-dt,
+  "accordion-bg":                         $accordion-bg-dt,
   "accordion-border-color":               $accordion-border-color-dt,
   "accordion-button-active-bg":           $accordion-button-active-bg-dt,
   "accordion-button-active-color":        $accordion-button-active-color-dt,
@@ -625,18 +628,58 @@ $sidebar-toggler-bg-dt:               rgba($black, .2) !default;
 $sidebar-toggler-hover-bg-dt:         rgba($black, .3) !default;
 // $sidebar-toggler-hover-indicator-dt:  !default;
 // $sidebar-toggler-indicator-dt:        !default;
+$sidebar-nav-title-color-dt:                 $medium-emphasis-dt !default;
+$sidebar-nav-link-color-dt:                  $medium-emphasis-dt !default;
+$sidebar-nav-link-bg-dt:                     transparent !default;
+$sidebar-nav-link-icon-color-dt:             $medium-emphasis-dt !default;
+$sidebar-nav-link-hover-color-dt:            $high-emphasis-dt !default;
+$sidebar-nav-link-hover-bg-dt:               rgba($white, .05) !default;
+$sidebar-nav-link-hover-icon-color-dt:       $high-emphasis-dt !default;
+
+$sidebar-nav-link-active-color-dt:           $high-emphasis-dt !default;
+$sidebar-nav-link-active-bg-dt:              rgba($white, .05) !default;
+$sidebar-nav-link-active-icon-color-dt:      $high-emphasis-dt !default;
+
+$sidebar-nav-link-disabled-color-dt:         $disabled-dt !default;
+$sidebar-nav-link-disabled-icon-color-dt:    $sidebar-nav-link-icon-color-dt !default;
+
+$sidebar-nav-group-bg-dt:                    rgba(0, 0, 0, .2) !default;
+$sidebar-nav-group-toggle-show-color-dt:     $sidebar-nav-link-color-dt !default;
+
+$sidebar-nav-group-indicator-color-dt:        $medium-emphasis-dt !default;
+$sidebar-nav-group-indicator-icon-dt:         url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$sidebar-nav-group-indicator-color-dt}'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !default;
+$sidebar-nav-group-indicator-hover-color-dt:  $sidebar-nav-link-hover-color-dt !default;
+$sidebar-nav-group-indicator-hover-icon-dt:   url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$sidebar-nav-group-indicator-hover-color-dt}'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !default;
 
 $sidebar-theme-map: (
-  "sidebar-color":             $sidebar-color-dt,
-  "sidebar-bg":                $sidebar-bg-dt,
-  "sidebar-border-width":      $sidebar-border-width-dt,
-  "sidebar-border-color":      $sidebar-border-color-dt,
-  "sidebar-brand-color":       $sidebar-brand-color-dt,
-  "sidebar-brand-bg":          $sidebar-brand-bg-dt,
-  "sidebar-footer-bg":         $sidebar-footer-bg-dt,
-  "sidebar-header-bg":         $sidebar-header-bg-dt,
-  "sidebar-toggler-bg":        $sidebar-toggler-bg-dt,
-  "sidebar-toggler-hover-bg":  $sidebar-toggler-hover-bg-dt
+  "sidebar-color":                            $sidebar-color-dt,
+  "sidebar-bg":                               $sidebar-bg-dt,
+  "sidebar-border-width":                     $sidebar-border-width-dt,
+  "sidebar-border-color":                     $sidebar-border-color-dt,
+  "sidebar-brand-color":                      $sidebar-brand-color-dt,
+  "sidebar-brand-bg":                         $sidebar-brand-bg-dt,
+  "sidebar-footer-bg":                        $sidebar-footer-bg-dt,
+  "sidebar-header-bg":                        $sidebar-header-bg-dt,
+  "sidebar-toggler-bg":                       $sidebar-toggler-bg-dt,
+  "sidebar-toggler-hover-bg":                 $sidebar-toggler-hover-bg-dt,
+  "sidebar-nav-title-color":                  $sidebar-nav-title-color-dt,
+  "sidebar-nav-link-color":                   $sidebar-nav-link-color-dt,
+  "sidebar-nav-link-bg":                      $sidebar-nav-link-bg-dt,
+  "sidebar-nav-link-icon-color":              $sidebar-nav-link-icon-color-dt,
+  "sidebar-nav-link-hover-color":             $sidebar-nav-link-hover-color-dt,
+  "sidebar-nav-link-hover-bg":                $sidebar-nav-link-hover-bg-dt,
+  "sidebar-nav-link-hover-icon-color":        $sidebar-nav-link-hover-icon-color-dt,
+  "sidebar-nav-link-active-color":            $sidebar-nav-link-active-color-dt,
+  "sidebar-nav-link-active-bg":               $sidebar-nav-link-active-bg-dt,
+  "sidebar-nav-link-active-icon-color":       $sidebar-nav-link-active-icon-color-dt,
+  "sidebar-nav-link-disabled-color":          $sidebar-nav-link-disabled-color-dt,
+  "sidebar-nav-link-disabled-icon-color":     $sidebar-nav-link-disabled-icon-color-dt,
+  "sidebar-nav-group-bg":                     $sidebar-nav-group-bg-dt,
+  "sidebar-nav-group-toggle-show-color":      $sidebar-nav-group-toggle-show-color-dt,
+  "sidebar-nav-group-indicator-color":        $sidebar-nav-group-indicator-color-dt,
+  "sidebar-nav-group-indicator-icon":         $sidebar-nav-group-indicator-icon-dt,
+  "sidebar-nav-group-indicator-hover-color":  $sidebar-nav-group-indicator-hover-color-dt,
+  "sidebar-nav-group-indicator-hover-icon":   $sidebar-nav-group-indicator-hover-icon-dt,
 ) !default;
 
 $table-color-dt:              $body-color-dt !default;
